@@ -1,46 +1,0 @@
-#encoding=utf-8
-
-# models.py
-# This file is part of PSR Registration Shuffler
-#
-# Copyright (C) 2008 - Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
-#
-# This is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# It is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this file. If not, write to the Free Software
-# Foundation, Inc., 51 Franklin St, Fifth Floor,
-# Boston, MA  02110-1301  USA
-
-'''
-PURPOSE
-=======
-
-This module holds simple constants with the short names of available
-keyboard models. Since these names are meant to be used within data files
-(registration files mostly) they should never be translated to foreign
-languages.
-'''
-
-# Public export of module content
-__all__ = [
-    "YAMAHA_PSR2000"
-]
-
-
-# Constants with technical short names for keyboard models
-YAMAHA_PSR2000 = "YAMAHA PSR2000"
-
-
-# Dictionary with user-friendly product names. (Not translateable)
-name = {
-    YAMAHA_PSR2000: "Yamaha PSR-2000"
-}
